--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "randomcolor": "^0.5.4",
     "react": "^16.8.6",
+    "react-beautiful-dnd": "^11.0.4",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
