--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "hex-to-rgba": "^2.0.0",
     "randomcolor": "^0.5.4",
     "react": "^16.8.6",
     "react-beautiful-dnd": "^11.0.4",
